docs/7.57/md/abapat_itab.md
---
title: "AT, Group Level Processing"
description: |
  Short Reference(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_shortref.htm) Syntax LOOP AT itab(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm) result(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm)
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_itab.htm"
abapFile: "abapat_itab.htm"
keywords: ["select", "loop", "do", "if", "case", "try", "catch", "class", "data", "internal-table", "field-symbol", "abapat", "itab"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Internal Tables (itab)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab.htm) →  [itab - Processing Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_processing_statements.htm) →  [LOOP AT itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_variants.htm) →  [LOOP AT itab, Basic Form](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: AT, Group Level Processing, ABAPAT_ITAB, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0
ASuggestion for improvement:)

AT, Group Level Processing

[Short Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_shortref.htm)

Syntax

[LOOP AT itab](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm) [result](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) *\[*[cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm)*\]*.
  *\[*AT FIRST.
     ...
   ENDAT.*\]*
    *\[*AT NEW [comp1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_components.htm).
       ...
     ENDAT.
       *\[*AT NEW [comp2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_components.htm).
         ...
       ENDAT.
         *\[*...*\]**\]**\]*
           *\[* ... *\]*
       *\[**\[**\[*...*\]*
       AT END OF [comp2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_components.htm).
         ...
       ENDAT.*\]*
     AT END OF [comp1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_components.htm).
       ...
     ENDAT.*\]*
  *\[*AT LAST.
     ...
  ENDAT.*\]*
ENDLOOP.

Additions:

[1\. ...  FIRST](#!ABAP_ADDITION_1@1@)
[2\. ... *{*NEW*}**|**{*END OF*}* compi](#!ABAP_ADDITION_2@2@)
[3\. ...  LAST](#!ABAP_ADDITION_3@3@)

Effect

The statement block of a [LOOP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm) without the addition [GROUP BY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_group_by.htm) can contain control structures for [group level processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengroup_level_processing_glosry.htm "Glossary Entry"). The corresponding control statement is AT. The statements AT and ENDAT define statement blocks that are executed at [group breaks](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengroup_break_glosry.htm "Glossary Entry"), that is, in the transition of one [group level](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengroup_level_glosry.htm "Glossary Entry") to another group level. The additions of the statements AT define the criteria for a group break and hence the group levels. Group breaks between group levels are a result of the line structure and the processing order in which the LOOP reads the lines of the internal table. Within the statement blocks, the statement [SUM](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsum.htm) can be specified to total the numeric components of a group level.

Apart from the special variants AT FIRST and AT LAST, group levels are defined using the variants AT NEW AT END OF and by the consecutive lines of the internal table specified in accordance with the processing order of the loop. These lines have the same content in a group key defined by their initial part. Here, all lines of the internal table are respected without evaluating any restricting conditions [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm).

Although it is syntactically possible to arrange AT control structures in any order and to nest them, however, effective group level processing is usually only achieved by the arrangement above. Here, the control structures are listed in accordance with the arrangement of the components in the group key and are not nested.

The statement blocks within the AT\-ENDAT control structures are executed if a corresponding group break takes place in the current table line. Statements in the LOOP\-ENDLOOP control structure that are not executed within an AT\-ENDAT control structure are executed in each pass of the loop. If a table line with a group break is not read due to a restricting condition [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm), the corresponding statement block is not executed.

The following rules must be observed for effective group level processing:

-   A table key specified in LOOP in [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm) must be chosen so that it produces the required processing order of the imported lines.
-   The addition [STEP](abaploop_at_itab_cond.htm#!ABAP_ADDITION_3@3@) cannot be specified. Also other restricting conditions [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm) should not be specified. If a condition is specified, it should select consecutive line groups, including the first line in the group where the group break takes place.
-   The internal table must not be modified within the LOOP loop.
-   A work area wa specified in the LOOP statement after the addition INTO must be [compatible](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencompatible_glosry.htm "Glossary Entry") with the line type of the table.
-   A field symbol <fs> specified in the statement LOOP after the addition ASSIGNING must be typed with the line type of the table.
-   The content of a work area [wa](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm) specified in the statement [LOOP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) after the addition INTO cannot be modified.

If the addition [INTO wa](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) is used in the statement [LOOP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm), the content of wa is overwritten when the AT\- ENDAT control structure is entered, depending on the respective group level, and is reset to the content of the current line when the control structure is exited. When the additions [ASSIGNING](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) and [REFERENCE INTO](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) are used, the referenced table lines are not modified when entering and exiting the AT\-ENDAT control structure.

Hints

-   The most common case is when the internal table is sorted exactly by the order of the components of its line type, that is, by the first component first, then by the second component, and so on. In this case, group level processing can also be expressed using a grouping with the addition [GROUP BY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_group_by.htm).
-   If possible, the use of the addition [GROUP BY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_group_by.htm) is recommended, since the grouping does not depend on the structure of the lines and the processing order in this case.
-   Group level processing with the statement AT is not possible in LOOP statements across line groups with the addition [GROUP BY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_group_by.htm), including member loops using [LOOP AT GROUP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_group.htm).
-   The group level processing described here can produce unexpected results when a restricting condition [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm) is used, which means that extended syntax check messages can occur.

Executable Example

[Group Level Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenat_itab_abexas.htm)

Addition 1   

... FIRST

Effect

The group level is defined by the first line of the internal table. The group break takes place when this line is read. In the group level AT FIRST, the current group key does not contain any components.

If the addition [INTO wa](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) is used in the statement [LOOP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm), all character-like components of the work area wa are filled with \* when the control structure AT FIRST is entered and all other components are set to their initial value. In the case of an elementary line type, this applies to the entire work area. When the AT\-ENDAT control structure is exited, the content of the current table line is reassigned to the work area wa.

Hint

If the first line of the internal table is not read due to a restricting condition [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm), the statement block of the control structure AT FIRST is not executed.

Example

Display of a header and the first line of an internal table at the group level AT FIRST.

DATA itab TYPE SORTED TABLE OF scarr
               WITH UNIQUE KEY carrid.
SELECT \*
       FROM scarr
       INTO TABLE itab.
FINAL(out) = cl\_demo\_output=>new( ).
LOOP AT itab ASSIGNING FIELD-SYMBOL(<fs>).
  AT FIRST.
    out->next\_section( 'First' ).
    out->write( <fs> ).
  ENDAT.
ENDLOOP.
out->display( ).

Addition 2   

... *{*NEW*}**|**{*END OF*}* compi

Effect

Group levels are defined by the beginning or end of a group of lines with the same content in the component compi (where i = 1, 2, and so on) and in the components on the left of compi. The content of these components determines the group key. The group breaks take place when the content of the component compi or another component on the left of compi changes.

The compi components can be specified as described in [Specification of Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_components.htm), with the restriction that access to data objects using references is not possible here. The following is therefore not possible:

-   Specifying data objects using data references
-   Specifying attributes of objects using object references

Otherwise, the specified components can have any data type. The corresponding [comparison rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogexp_rules.htm) apply to the evaluation. In the case of an elementary line type, only table\_line can be specified as the group key.

If the addition [INTO wa](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) is used in the statement [LOOP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm), the content of wa is modified as follows when the AT\-ENDAT control structure is entered:

-   The components of the current group key remain unchanged.
-   All components with a character-like [flat](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenflat_glosry.htm "Glossary Entry") data type on the right of the current control key are set to the character \* in every place.
-   All the other components to the right of the current group key are set to their [initial value](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninitial_value_glosry.htm "Glossary Entry").

In the case of an elementary line type, the entire work area corresponds to the current group key and remains unchanged. When the AT\-ENDAT control structure is exited, the content of the current table line is reassigned to the work area wa.

Hints

-   Group levels defined in this way consist of the consecutive lines of the internal table that have the same content in an initial part.
-   If the first or last line of a line group is not read due to a restricting condition [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm), the statement block of the control structure AT NEW or AT END OF is not executed.
-   An [obsolete variant](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_itab_obsolete.htm) allows field symbols to also be specified, outside of classes compi.

Example

Display of the carrid column as a header for the chained content of the associated flight numbers.

DATA itab TYPE SORTED TABLE OF spfli
               WITH UNIQUE KEY carrid connid.
SELECT \*
       FROM spfli
       INTO TABLE itab.
DATA connids TYPE string.
FINAL(out) = cl\_demo\_output=>new( ).
LOOP AT itab ASSIGNING FIELD-SYMBOL(<fs>).
  AT NEW carrid.
    out->next\_section( <fs>-carrid ).
  ENDAT.
  connids = connids && \` \` && <fs>-connid.
  AT END OF carrid.
    out->write( connids ).
    CLEAR connids.
  ENDAT.
ENDLOOP.
out->display( ).

Example

The first line of the first line group is not read due to the addition FROM 2, which means the associated statement block after AT NEW table\_line is not executed. The program therefore produces a message from the extended program check.

DATA itab TYPE TABLE OF string WITH EMPTY KEY.
itab = VALUE #( ( \`AA\` ) ( \`AA\` ) ( \`AA\` )
                ( \`BB\` ) ( \`BB\` ) ( \`BB\` ) ).
FINAL(out) = cl\_demo\_output=>new( ).
LOOP AT itab ASSIGNING FIELD-SYMBOL(<fs>) FROM 2.
  AT NEW table\_line.
    out->write( <fs> ).
  ENDAT.
ENDLOOP.
out->display( ).

Addition 3   

... LAST

Effect

The group level is defined by the last line of the internal table. The group break takes place when this line is read. In the group level AT LAST, the current group key does not contain any components.

If the addition [INTO wa](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_result.htm) is used in the statement [LOOP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab.htm), all character-like components of the work area wa are filled with \* when the control structure AT LAST is entered and all other components are set to their initial value. In the case of an elementary line type, this applies to the entire work area. When the AT\-ENDAT control structure is exited, the content of the current table line is reassigned to the work area wa.

Hint

If the last line of the internal table is not read due to a restricting condition [cond](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaploop_at_itab_cond.htm), the statement block of the control structure AT LAST is not executed.

Example

Display of cumulated content during the processing of the last line.

DATA itab TYPE SORTED TABLE OF scarr
               WITH UNIQUE KEY carrid.
SELECT \*
       FROM scarr
       INTO TABLE itab.
DATA carrids TYPE string.
LOOP AT itab ASSIGNING FIELD-SYMBOL(<fs>).
  carrids = carrids && \` \` && <fs>-carrid.
  AT LAST.
    cl\_demo\_output=>display( carrids ).
  ENDAT.
ENDLOOP.

[Exceptions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_exceptions.htm)

Uncatchable Exceptions

-   Cause: Invalid substring access when the group break criterion is specified dynamically.
    Runtime error: AT\_BAD\_PARTIAL\_FIELD\_ACCESS
-   Cause: The group break criterion is specified dynamically using the field symbol and the field symbol does not point to the LOOP output range.
    Runtime error: AT\_ITAB\_FIELD\_INVALID
-   Cause: The group break criterion is specified dynamically using (name) and the name field does not contain a valid substring name.
    Runtime error: ITAB\_ILLEGAL\_COMPONENT
-   Cause: Overflow of totals with SUM.
    Runtime error: SUM\_OVERFLOW

Continue
[SUM](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsum.htm)
[ENDAT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapendat.htm)
[Examples of Group Level Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenat_itab_abexas.htm)